[gd_scene load_steps=11 format=3 uid="uid://bs8rv5p0dbfq0"]

[ext_resource type="Script" uid="uid://8877nk8higmh" path="res://Scripts/skill_slot.gd" id="1_fp0hd"]
[ext_resource type="Texture2D" uid="uid://dbh4nuv6nk0gy" path="res://Assets/Card/sprite_sheet.png" id="2_r7cac"]
[ext_resource type="Texture2D" uid="uid://8hhnom7ismws" path="res://Assets/Card/blue_circleshape.png" id="5_7sh1w"]
[ext_resource type="FontFile" uid="uid://she0a0h1u8l6" path="res://Fonts/Baby Bears.ttf" id="5_f4dox"]
[ext_resource type="FontFile" uid="uid://ddjhh1juon5oe" path="res://Fonts/Bear Days.ttf" id="6_f4dox"]

[sub_resource type="AtlasTexture" id="AtlasTexture_r7cac"]
atlas = ExtResource("2_r7cac")
region = Rect2(294, 775, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_kk5ey"]
atlas = ExtResource("2_r7cac")
region = Rect2(294, 711, 20, 20)

[sub_resource type="Gradient" id="Gradient_r7cac"]
offsets = PackedFloat32Array(0.53125, 0.6666667)
colors = PackedColorArray(0, 0, 0, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_7sh1w"]
gradient = SubResource("Gradient_r7cac")
fill = 1
fill_from = Vector2(0.535, 0.54)

[sub_resource type="AtlasTexture" id="AtlasTexture_nwjgp"]
atlas = ExtResource("2_r7cac")
region = Rect2(465, 769, 14, 14)

[node name="SkillSlot" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_fp0hd")

[node name="CircleShapeBG" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
offset_left = -34.0
offset_top = -34.0
offset_right = 34.0
offset_bottom = 34.0
texture = SubResource("AtlasTexture_r7cac")
stretch_mode = 5

[node name="ClipShape" type="TextureRect" parent="."]
clip_children = 1
texture_filter = 1
layout_mode = 1
offset_left = -34.0
offset_top = -34.0
offset_right = 34.0
offset_bottom = 34.0
texture = SubResource("AtlasTexture_kk5ey")
stretch_mode = 5

[node name="Icon" type="TextureRect" parent="ClipShape"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 1
offset_left = 10.0
offset_top = 10.0
offset_right = 58.0
offset_bottom = 58.0
expand_mode = 1
stretch_mode = 5

[node name="CooldownOverlay" type="TextureProgressBar" parent="."]
layout_mode = 1
offset_left = -34.0
offset_top = -34.0
offset_right = 34.0
offset_bottom = 34.0
fill_mode = 4
texture_progress = SubResource("GradientTexture2D_7sh1w")
tint_progress = Color(0.18, 0.18, 0.18, 0.5058824)

[node name="TimerLabel" type="Label" parent="."]
layout_mode = 1
offset_left = -24.0
offset_top = -17.0
offset_right = 24.0
offset_bottom = 17.0
theme_override_fonts/font = ExtResource("5_f4dox")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="CircleShapeBorder" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
offset_left = -34.0
offset_top = -34.0
offset_right = 34.0
offset_bottom = 34.0
texture = ExtResource("5_7sh1w")
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = -15.0
offset_top = 15.0
offset_right = 15.0
offset_bottom = 45.0
texture = SubResource("AtlasTexture_nwjgp")

[node name="KeyLabel" type="Label" parent="TextureRect"]
texture_filter = 2
layout_mode = 0
offset_left = 9.0
offset_top = 3.0
offset_right = 24.0
offset_bottom = 39.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 0
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("6_f4dox")
theme_override_font_sizes/font_size = 22
text = "1"
